[package]
name = "crossbeam-deque"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "crossbeam-deque-X.Y.Z" git tag
version = "0.8.1"
authors = ["The Crossbeam Project Developers"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crossbeam-rs/crossbeam"
homepage = "https://github.com/crossbeam-rs/crossbeam/tree/master/crossbeam-deque"
description = "Concurrent work-stealing deque"
keywords = ["chase-lev", "lock-free", "scheduler", "scheduling"]
categories = ["algorithms", "concurrency", "data-structures"]

[features]
default = ["std"]
mesalock_sgx = ["sgx_tstd", "std"]

# Enable to use APIs that require `std`.
# This is enabled by default.
#
# NOTE: Disabling `std` feature is not supported yet.
std = ["crossbeam-epoch/std", "crossbeam-utils/std"]

[dependencies]
cfg-if = "1"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3", optional = true, features = ["thread"] }

[dependencies.crossbeam-epoch]
version = "0.9"
path = "../crossbeam-epoch"
default-features = false
features = ["mesalock_sgx"]
optional = true

[dependencies.crossbeam-utils]
version = "0.8"
path = "../crossbeam-utils"
default-features = false
features = ["mesalock_sgx"]
optional = true

[dev-dependencies]
rand = "0.8"
