cargo-features = ["resolver"]
[package]
name = "crossbeam-utils"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "crossbeam-utils-X.Y.Z" git tag
version = "0.8.8"
edition = "2018"
rust-version = "1.36"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crossbeam-rs/crossbeam"
homepage = "https://github.com/crossbeam-rs/crossbeam/tree/master/crossbeam-utils"
description = "Utilities for concurrent programming"
keywords = ["scoped", "thread", "atomic", "cache"]
categories = ["algorithms", "concurrency", "data-structures", "no-std"]

[features]
default = ["std"]
mesalock_sgx = ["sgx_tstd", "std"]

# Enable to use APIs that require `std`.
# This is enabled by default.
std = ["lazy_static"]
nightly = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3", optional = true, features = ["thread"] }

[dependencies]
cfg-if = "1"
lazy_static = { version = "1.4.0", optional = true, features = ["spin_no_std"] }

# Enable the use of loom for concurrency testing.
#
# NOTE: This feature is outside of the normal semver guarantees and minor or
# patch versions of crossbeam may make breaking changes to them at any time.
[target.'cfg(crossbeam_loom)'.dependencies]
loom = { version = "0.5", optional = true }

[dev-dependencies]
rand = "0.8"
rustversion = "1"
